{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 42,
  "lineage": "00ceeda1-7b82-cc27-ba38-9cec559087e0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fgtport1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkInterfaces/fgtport1",
            "internal_domain_name_suffix": "1rgxw0zllfvupea3kfmrpiraya.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.31.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/publicIPAddresses/FortiGate-Branch_PIP",
                "subnet_id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Branch_VNET/subnets/Public-Branch_SUBNET"
              }
            ],
            "location": "eastus",
            "name": "fgtport1",
            "private_ip_address": "172.31.1.4",
            "private_ip_addresses": [
              "172.31.1.4"
            ],
            "resource_group_name": "vwan13-training"
          },
          "dependencies": [
            "azurerm_public_ip.FGTPublicIp",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.fgtvnetwork",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fgtport2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkInterfaces/fgtport2",
            "internal_domain_name_suffix": "1rgxw0zllfvupea3kfmrpiraya.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.31.1.20",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Branch_VNET/subnets/Private-Branch_SUBNET"
              }
            ],
            "location": "eastus",
            "name": "fgtport2",
            "private_ip_address": "172.31.1.20",
            "private_ip_addresses": [
              "172.31.1.20"
            ],
            "resource_group_name": "vwan13-training"
          },
          "dependencies": [
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.fgtvnetwork",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linuxvm-branch-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkInterfaces/Linux-Branch_nic1",
            "internal_domain_name_suffix": "1rgxw0zllfvupea3kfmrpiraya.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "172.31.1.36",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Branch_VNET/subnets/Protected-Branch_SUBNET"
              }
            ],
            "location": "eastus",
            "name": "Linux-Branch_nic1",
            "private_ip_address": "172.31.1.36",
            "private_ip_addresses": [
              "172.31.1.36"
            ],
            "resource_group_name": "vwan13-training"
          },
          "dependencies": [
            "azurerm_subnet.protectedsubnet",
            "azurerm_virtual_network.fgtvnetwork",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linuxvm-hub1spoke1-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkInterfaces/Linux-Spoke1_nic1",
            "internal_domain_name_suffix": "1mktix43avtunkf0sg1m1rpowe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Spoke1-vHub1_VNET/subnets/Subnet1-Spoke1_SUBNET"
              }
            ],
            "location": "eastus",
            "name": "Linux-Spoke1_nic1",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "vwan13-training"
          },
          "dependencies": [
            "azurerm_subnet.hub1spoke1-subnet1",
            "azurerm_virtual_network.hub1spoke1-vnet",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linuxvm-hub1spoke2-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkInterfaces/Linux-Spoke2_nic1",
            "internal_domain_name_suffix": "0syq0pu0ht4ufce5323b3puekd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "172.16.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Spoke2-vHub1_VNET/subnets/Subnet1-Spoke2_SUBNET"
              }
            ],
            "location": "eastus",
            "name": "Linux-Spoke2_nic1",
            "private_ip_address": "172.16.1.4",
            "private_ip_addresses": [
              "172.16.1.4"
            ],
            "resource_group_name": "vwan13-training"
          },
          "dependencies": [
            "azurerm_subnet.hub1spoke2-subnet1",
            "azurerm_virtual_network.hub1spoke2-vnet",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "port1nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkInterfaces/fgtport1|/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkSecurityGroups/FortiGate-Branch-public_NSG",
            "network_interface_id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkInterfaces/fgtport1",
            "network_security_group_id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkSecurityGroups/FortiGate-Branch-public_NSG"
          },
          "dependencies": [
            "azurerm_network_interface.fgtport1",
            "azurerm_network_security_group.publicnetworknsg",
            "azurerm_public_ip.FGTPublicIp",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.fgtvnetwork",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "port2nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkInterfaces/fgtport2|/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkSecurityGroups/FortiGate-Branch-private_NSG",
            "network_interface_id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkInterfaces/fgtport2",
            "network_security_group_id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkSecurityGroups/FortiGate-Branch-private_NSG"
          },
          "dependencies": [
            "azurerm_network_interface.fgtport1",
            "azurerm_network_interface.fgtport2",
            "azurerm_network_security_group.privatenetworknsg",
            "azurerm_public_ip.FGTPublicIp",
            "azurerm_subnet.privatesubnet",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.fgtvnetwork",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "privatenetworknsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkSecurityGroups/FortiGate-Branch-private_NSG",
            "location": "eastus",
            "name": "FortiGate-Branch-private_NSG",
            "resource_group_name": "vwan13-training",
            "security_rule": [
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "All",
                "priority": 1001,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "publicnetworknsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkSecurityGroups/FortiGate-Branch-public_NSG",
            "location": "eastus",
            "name": "FortiGate-Branch-public_NSG",
            "resource_group_name": "vwan13-training",
            "security_rule": [
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outgoing_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkSecurityGroups/FortiGate-Branch-private_NSG/securityRules/egress-private",
            "name": "egress-private",
            "network_security_group_name": "FortiGate-Branch-private_NSG",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "vwan13-training",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.privatenetworknsg",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outgoing_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/networkSecurityGroups/FortiGate-Branch-public_NSG/securityRules/egress",
            "name": "egress",
            "network_security_group_name": "FortiGate-Branch-public_NSG",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "vwan13-training",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.publicnetworknsg",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "FGTPublicIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/publicIPAddresses/FortiGate-Branch_PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.101.8",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "FortiGate-Branch_PIP",
            "resource_group_name": "vwan13-training",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "protected-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub1spoke1-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Spoke1-vHub1_VNET/subnets/Subnet1-Spoke1_SUBNET",
            "name": "Subnet1-Spoke1_SUBNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "vwan13-training",
            "virtual_network_name": "Spoke1-vHub1_VNET"
          },
          "dependencies": [
            "azurerm_virtual_network.hub1spoke1-vnet",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub1spoke2-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Spoke2-vHub1_VNET/subnets/Subnet1-Spoke2_SUBNET",
            "name": "Subnet1-Spoke2_SUBNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "vwan13-training",
            "virtual_network_name": "Spoke2-vHub1_VNET"
          },
          "dependencies": [
            "azurerm_virtual_network.hub1spoke2-vnet",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.31.1.16/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Branch_VNET/subnets/Private-Branch_SUBNET",
            "name": "Private-Branch_SUBNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "vwan13-training",
            "virtual_network_name": "Branch_VNET"
          },
          "dependencies": [
            "azurerm_virtual_network.fgtvnetwork",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "protectedsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.31.1.32/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Branch_VNET/subnets/Protected-Branch_SUBNET",
            "name": "Protected-Branch_SUBNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "vwan13-training",
            "virtual_network_name": "Branch_VNET"
          },
          "dependencies": [
            "azurerm_virtual_network.fgtvnetwork",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.31.1.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Branch_VNET/subnets/Public-Branch_SUBNET",
            "name": "Public-Branch_SUBNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "vwan13-training",
            "virtual_network_name": "Branch_VNET"
          },
          "dependencies": [
            "azurerm_virtual_network.fgtvnetwork",
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "fgtvnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.31.1.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6b7b4ddc-592b-476b-901d-515917a220c0",
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Branch_VNET",
            "location": "eastus",
            "name": "Branch_VNET",
            "resource_group_name": "vwan13-training",
            "subnet": [
              {
                "address_prefix": "172.31.1.0/28",
                "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Branch_VNET/subnets/Public-Branch_SUBNET",
                "name": "Public-Branch_SUBNET"
              },
              {
                "address_prefix": "172.31.1.16/28",
                "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Branch_VNET/subnets/Private-Branch_SUBNET",
                "name": "Private-Branch_SUBNET"
              },
              {
                "address_prefix": "172.31.1.32/28",
                "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Branch_VNET/subnets/Protected-Branch_SUBNET",
                "name": "Protected-Branch_SUBNET"
              }
            ]
          },
          "dependencies": [
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub1spoke1-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.1.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5f3415db-05dd-4667-a8ba-91b6cdc5eeb4",
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Spoke1-vHub1_VNET",
            "location": "eastus",
            "name": "Spoke1-vHub1_VNET",
            "resource_group_name": "vwan13-training",
            "subnet": [
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Spoke1-vHub1_VNET/subnets/Subnet1-Spoke1_SUBNET",
                "name": "Subnet1-Spoke1_SUBNET"
              }
            ]
          },
          "dependencies": [
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub1spoke2-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vwan13",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.1.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3e0db1d4-3c9a-42fd-889f-ef3a1ebe8453",
            "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Spoke2-vHub1_VNET",
            "location": "eastus",
            "name": "Spoke2-vHub1_VNET",
            "resource_group_name": "vwan13-training",
            "subnet": [
              {
                "address_prefix": "172.16.1.0/24",
                "id": "/subscriptions/02b50049-c444-416f-a126-3e4c815501ac/resourceGroups/vwan13-training/providers/Microsoft.Network/virtualNetworks/Spoke2-vHub1_VNET/subnets/Subnet1-Spoke2_SUBNET",
                "name": "Subnet1-Spoke2_SUBNET"
              }
            ]
          },
          "dependencies": [
            "data.azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    }
  ]
}